--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
   flutter_secure_storage: ^9.2.4
+  google_fonts: ^6.3.1
 
 dev_dependencies:
   flutter_test:
