--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   json_annotation: ^4.9.0
   flutter_secure_storage: ^9.2.4
   google_fonts: ^6.3.1
+  phosphor_flutter: ^2.1.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
