chore: deploy script

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,23 +1,27 @@
-FROM node:20-alpine AS base
+FROM node:20-bookworm AS builder
+
+RUN apt-get update -y && apt-get install -y openssl
 
 WORKDIR /usr/src/app
 
 COPY package*.json ./
-RUN npm install --omit=dev
+RUN npm ci
 
-COPY prisma ./prisma/
-
+COPY prisma ./prisma
 RUN npx prisma generate
-
-FROM node:20-alpine
-
-WORKDIR /usr/src/app
-
-COPY --from=base /usr/src/app/node_modules ./node_modules
-COPY --from=base /usr/src/app/prisma ./prisma
 
 COPY . .
 
+FROM node:20-bookworm
+
+RUN apt-get update -y && apt-get install -y openssl
+
+WORKDIR /usr/src/app
+
+COPY --from=builder /usr/src/app/node_modules ./node_modules
+COPY --from=builder /usr/src/app/prisma ./prisma
+COPY --from=builder /usr/src/app ./
+
 EXPOSE 8080
 
-CMD ["sh", "-c", "npx prisma migrate deploy && node src/server.js"]
+CMD ["sh", "-c", "npx prisma generate && npx prisma migrate deploy && node src/server.js"]
