--- a/backend/.env.production
+++ b/backend/.env.production
@@ -1,13 +1,9 @@
 PORT=8080
 CORS_ALLOWED_ORIGINS=*
 
-MYSQL_DATABASE=iconplus_db
-MYSQL_USER=iconplus_user
-MYSQL_PASSWORD=password
-MYSQL_ROOT_PASSWORD=password
+DATABASE_URL="mysql://user:password@db:3306/iconplus_db"
 
-DATABASE_URL="mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@db:3306/${MYSQL_DATABASE}"
-
-JWT_SECRET=alskjfalwejflajweflkjawelkfjalkwejfklwe
+# JWT Configuration
+JWT_SECRET=a_very_strong_and_long_production_secret_key_of_at_least_32_chars
 ACCESS_TOKEN_TTL=15m
 REFRESH_TOKEN_TTL=7d
